--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>Rom Crawler - Apenas mais um spider de ROMS na internet</title>
+
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+        <meta name="description" content="Rom Crawler ajuda você a ir atrás daquela ROM que você tanto procurava">
+        <link rel="author" href="https://plus.google.com/+AlexandreMoraesKalvin">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -17,70 +22,124 @@
                 padding-bottom: 20px;
             }
         </style>
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <!--        <link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id))
+                    return;
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=640925519309796&version=v2.0";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Rom Crawler</a>
+                    <a class="navbar-brand" href="/rom-crawler">Rom Crawler</a>
                 </div>
-                <div class="navbar-collapse collapse">
-                    <form class="navbar-form navbar-right" method="GET" role="form">
-                        <div class="form-group">
-                            <input type="text" placeholder="Procura" name="s" class="form-control">
-                        </div>
-                        <button type="submit" class="btn btn-success">Procurar</button>
+                <div class="navbar-collapse collapse navbar-inverse-collapse">
+                    <form class="navbar-form navbar-left">
+                        <input type="text" class="form-control col-lg-8" size="50" name="s" placeholder="Pesquisa">
                     </form>
-                </div><!--/.navbar-collapse -->
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a class="not-anim"><div class="fb-like" data-href="http://kalvinmoraes.github.io/rom-crawler/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div></a></li>
+                        <li><a href="https://github.com/kalvinmoraes/rom-crawler/tree/gh-pages" target="_blank">Github</a></li>
+                        <li><a href="privacy.html">Termos de Responsabilidade</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
             <div class="container">
                 <h1>ROM CRAWLER</h1>
-                <p>Just a Rom Crawler for fast get roms from internet</p>
-                <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+                <p>Apenas mais um spider de ROMS na internet</p>
             </div>
         </div>
 
         <div class="container">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>
-                            Emulador
-                        </th>
-                        <th>
-                            Rom
-                        </th>
-                    </tr>
-                </thead>
-                <tbody id="romContent">
+            <div class="home">
+                <div class="row main-search">
+                    <div class="col-md-12 text-center">
+                        <form method="GET">
+                            <input type="text" name="s" placeholder="Que ROM você procura?"> <button type="submit" class="btn btn-primary btn-lg">Pesquisar</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="row presentation">
+                    <div class="col-lg-4">
+                        <span class="glyphicon glyphicon-send"></span>
+                        <h1>On Going</h1>
+                        <p>Rom Crawler é um projeto aberto e é hospedado no github. Qualquer um pode contribuir com seu desenvolvimento, o que garante o suporte contínuo da aplicação.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <span class="glyphicon glyphicon-flash"></span>
+                        <h1>Rápido pacas</h1>
+                        <p>Rom Crawler trabalha em cima do desempenho do PC de cada usuário. Portanto, quanto melhor sua máquina, mais rápida são as requisições.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <span class="glyphicon glyphicon-heart"></span>
+                        <h1>Feito com amor</h1>
+                        <p>Rom Crawler foi criado por amantes de games, para amantes de games.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="rom-list">
 
-                </tbody>
-            </table>
+                <div class="alert alert-dismissable alert-danger">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <strong>AVISO</strong>
+                    <p>Esta aplicação não guarda nenhum arquivo aqui mostrado e não se responsabiliza pelos danos que os mesmos possam causar ao seu computador</p>
+                </div>
+                <div class="g-ads-top">
+
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="page-header">
+                            <h1></h1>
+                        </div>
+                    </div>
+                </div>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>
+                                Emulador
+                            </th>
+                            <th>
+                                Rom
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody id="romContent">
+
+                    </tbody>
+                </table>
+            </div>
 
             <hr>
-
             <footer>
-                <p>&copy; Company 2014</p>
+                <!-- ToDo Footer -->
             </footer>
-        </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        </div> <!-- /container -->        
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+        <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
 
