--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
+        <div id="waitForIt" class="text-center">
+            <span>Iniciando download...</span>
+        </div>
         <div id="fb-root"></div>
         <script>(function(d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
@@ -49,7 +52,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/rom-crawler">Rom Crawler</a>
+                    <a class="navbar-brand" href="/rom-crawler">Início</a>
                 </div>
                 <div class="navbar-collapse collapse navbar-inverse-collapse">
                     <form class="navbar-form navbar-left">
@@ -99,14 +102,28 @@
                 </div>
             </div>
             <div class="rom-list">
-
-                <div class="alert alert-dismissable alert-danger">
-                    <button type="button" class="close" data-dismiss="alert">×</button>
-                    <strong>AVISO</strong>
-                    <p>Esta aplicação não guarda nenhum arquivo aqui mostrado e não se responsabiliza pelos danos que os mesmos possam causar ao seu computador</p>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="alert alert-dismissable alert-danger">
+                            <button type="button" class="close" data-dismiss="alert">×</button>
+                            <strong>AVISO</strong>
+                            <p>Esta aplicação não guarda nenhum arquivo aqui mostrado e não se responsabiliza pelos danos que os mesmos possam causar ao seu computador</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="g-ads-top">
-
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="g-ads-top">
+                            <!-- Top Header Graphic -->
+                            <ins class="adsbygoogle"
+                                 style="display:inline-block;width:728px;height:90px"
+                                 data-ad-client="ca-pub-6584986264092470"
+                                 data-ad-slot="2924670549"></ins>
+                            <script>
+                                (adsbygoogle = window.adsbygoogle || []).push({});
+                            </script>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
@@ -119,10 +136,13 @@
                     <thead>
                         <tr>
                             <th>
-                                Emulador
+                                Plataforma
                             </th>
                             <th>
                                 Rom
+                            </th>
+                            <th>
+                                Fonte
                             </th>
                         </tr>
                     </thead>
@@ -146,22 +166,22 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script>
-            (function(i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function() {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+                        (function(i, s, o, g, r, a, m) {
+                            i['GoogleAnalyticsObject'] = r;
+                            i[r] = i[r] || function() {
+                                (i[r].q = i[r].q || []).push(arguments)
+                            }, i[r].l = 1 * new Date();
+                            a = s.createElement(o),
+                                    m = s.getElementsByTagName(o)[0];
+                            a.async = 1;
+                            a.src = g;
+                            m.parentNode.insertBefore(a, m)
+                        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-44356533-2', 'kalvinmoraes.github.io');
-            ga('send', 'pageview');
+                        ga('create', 'UA-44356533-2', 'kalvinmoraes.github.io');
+                        ga('send', 'pageview');
 
         </script>
     </body>
