--- a/privacy.html
+++ b/privacy.html
@@ -1,16 +1,107 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Rom Crawler - Apenas mais um spider de ROMS na internet</title>
+
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+        <meta name="description" content="Rom Crawler ajuda você a ir atrás daquela ROM que você tanto procurava">
+        <link rel="author" href="https://plus.google.com/+AlexandreMoraesKalvin">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <style>
+            body {
+                padding-top: 50px;
+                padding-bottom: 20px;
+            }
+        </style>
+        <!--        <link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
+        <link rel="stylesheet" href="css/main.css">
+
+        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id))
+                    return;
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=640925519309796&version=v2.0";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/rom-crawler">Início</a>
+                </div>
+                <div class="navbar-collapse collapse navbar-inverse-collapse">
+                    <form class="navbar-form navbar-left">
+                        <input type="text" class="form-control col-lg-8" size="50" name="s" placeholder="Pesquisa">
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a class="not-anim"><div class="fb-like" data-href="http://kalvinmoraes.github.io/rom-crawler/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div></a></li>
+                        <li><a href="https://github.com/kalvinmoraes/rom-crawler/tree/gh-pages" target="_blank">Github</a></li>
+                        <li><a href="privacy.html">Termos de Responsabilidade</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- Main jumbotron for a primary marketing message or call to action -->
+        <div class="jumbotron">
+            <div class="container">
+                <h1>ROM CRAWLER</h1>
+                <p>Apenas mais um spider de ROMS na internet</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="privacy">
+                Em andamento...
+            </div>
+            <hr>
+            <footer>
+                <!-- ToDo Footer -->
+            </footer>
+        </div> <!-- /container -->        
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+        <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+
+        <script src="js/vendor/bootstrap.min.js"></script>
+
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-44356533-2', 'kalvinmoraes.github.io');
+            ga('send', 'pageview');
+        </script>
     </body>
 </html>
