--- a/privacy.html
+++ b/privacy.html
@@ -52,7 +52,7 @@
                     <a class="navbar-brand" href="/rom-crawler">Início</a>
                 </div>
                 <div class="navbar-collapse collapse navbar-inverse-collapse">
-                    <form class="navbar-form navbar-left">
+                    <form class="navbar-form navbar-left" method="GET" action="/rom-crawler">
                         <input type="text" class="form-control col-lg-8" size="50" name="s" placeholder="Pesquisa">
                     </form>
                     <ul class="nav navbar-nav navbar-right">
