--- a/privacy.html
+++ b/privacy.html
@@ -10,9 +10,25 @@
 
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        
+        <!-- Google Authorship and Publisher Markup -->
+        <link rel="publisher" href=”https://plus.google.com/+AlexandreMoraesKalvin"/>
 
-        <meta name="description" content="Rom Crawler ajuda você a ir atrás daquela ROM que você tanto procurava">
+        <!-- Schema.org markup for Google+ --> 
+        <meta itemprop="name" content="Rom Crawler"> 
+        <meta itemprop="description" content="Apenas mais um spider de ROMS na internet"> 
+        <meta itemprop="image" content="http://kalvinmoraes.github.io/rom-crawler/apple-touch-icon-precomposed.png">
+
+        <!-- Open Graph data --> 
+        <meta property="og:title" content="Rom Crawler" /> 
+        <meta property="og:url" content="http://kalvinmoraes.github.io/rom-crawler/" />
+        <meta property="og:image" content="http://kalvinmoraes.github.io/rom-crawler/apple-touch-icon-precomposed.png" />
+        <meta property="og:description" content="Apenas mais um spider de ROMS na internet" /> 
+        <meta property="og:site_name" content="Rom Crawler" />
+        
+        <meta name="description" content="Apenas mais um spider de ROMS na internet">
         <link rel="author" href="https://plus.google.com/+AlexandreMoraesKalvin">
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
